bootstrap mongo driver

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,23 @@
 akka {
 
-  loglevel = "INFO"
+  loglevel = "DEBUG"
 
   loggers = ["akka.event.slf4j.Slf4jLogger"]
 
   log-dead-letters = on
 
   log-dead-letters-during-shutdown = on
-    
+
+//  persistence {
+
+//    journal.plugin = "mongo-journal"
+
+//    snapshot-store.plugin = "mongo-snapshot-store"
+
+//  }
+
 }
+
+mongo-journal.class = "akka.persistence.journal.mongo.MongoJournal"
+
+mongo-snapshot-store.class = "akka.persistence.snapshot.mongo.MongoSnapshotStore"
