bootstrap snapshots saving

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,13 +8,13 @@ akka {
 
   log-dead-letters-during-shutdown = on
 
-//  persistence {
+  persistence {
 
 //    journal.plugin = "mongo-journal"
 
-//    snapshot-store.plugin = "mongo-snapshot-store"
+    snapshot-store.plugin = "mongo-snapshot-store"
 
-//  }
+  }
 
 }
 
